--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <meta name="msapplication-TileColor" content="#e85e00">
         <meta name="theme-color" content="#e85e00">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.typekit.net/loh2egx.css">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
